--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@types/cheerio": "^1.0.0",
+    "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -49,9 +51,9 @@
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.1",
     "recharts": "^2.12.7",
-    "technicalindicators": "^3.1.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "technicalindicators": "^3.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
